Set 16:9 aspect ratio.

--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
     </script>
     <script>
       var slideshow = remark.create({
-        sourceUrl: 'deck-v3.md'
+        ratio: '16:9',
+        sourceUrl: 'deck.md'
       });
     </script>
   </body>
