Switch to new .md file for 20m version.
Because I'm having trouble w/ node dependencies.

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <script>
       var slideshow = remark.create({
         ratio: '16:9',
-        sourceUrl: 'deck.md'
+        sourceUrl: 'deck20mins.md'
       });
     </script>
   </body>
